update Random Meme api

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -8,6 +8,7 @@
   --background: black;
   --primary: #606470;
   --secondary: #93DEFF;
+  --ew: #ff4500;
   --error: #E33E5A;
   --success: #3AAFA9;
   --warning: #FFCB00;
